<resources>
    <string name="app_name">GrupoCincoMarketplace</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="prefs_file">com.jhondevs.grupocincomarketplace.PREFERENCE_FILE_KEY</string>
    <string name="txt_action_search">Search</string>
    <string name="txt_action_settings">Settings</string>
    <string name="txt_action_logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="user">User</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Mis Ordenes</string>
    <string name="menu_compras">Mis Compras</string>
    <string name="menu_terminos">Terminos y Condiciones</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_preguntas">Preguntas Frecuentes</string>
    <string name="menu_categoria">Categoria</string>

    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="test_search">¿Qué Buscas?</string>
    <string name="test_All">All</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="PREFERENCE_FILE_KEY" />
</resources>