<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/g1">
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_baseline_clean_hands_24"
            android:title="Productos" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_view_list_24"
            android:title="@string/menu_categoria" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />




    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/g2">
        <item android:title="Mi Cuenta"
            android:checkable="true"
            android:id="@+id/grupomicuenta">

             <menu>
                <item
                    android:id="@+id/nav_car"
                    android:checkable="true"
                    android:icon="@drawable/ic_baseline_shopping_cart_24"
                    android:title="Carrito de Compras" />
                <item
                    android:id="@+id/nav_compras"
                    android:checkable="true"
                    android:icon="@drawable/ic_baseline_restore_24"
                    android:title="@string/menu_compras" />
            </menu>

        </item>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/g3">
        <item android:title="Ayuda"
            android:checkable="true"
            android:id="@+id/grupoayuda">

            <menu>

                <item
                    android:id="@+id/nav_preguntas"
                    android:checkable="true"
                    android:icon="@drawable/ic_menu_question_mark_24"
                    android:title="@string/menu_preguntas" />
                <item
                    android:id="@+id/nav_contacto"
                    android:checkable="true"
                    android:icon="@drawable/ic_menu_perm_phone_msg_24"
                    android:title="@string/menu_contacto" />
                <item
                    android:id="@+id/nav_terminos"
                    android:checkable="true"
                    android:icon="@drawable/ic_menu_playlist_add_check_24"
                    android:title="@string/menu_terminos" />

            </menu>

        </item>
    </group>

</menu>
