<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_products">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jhondevs.grupocincomarketplace.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.jhondevs.grupocincomarketplace.ui.products.ProductsFragment"
        android:label="Products"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_nav_products_to_nav_pro_details"
            app:destination="@id/nav_pro_details" />
        <action
            android:id="@+id/action_nav_products_to_categoriasFragment"
            app:destination="@id/categoriasFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jhondevs.grupocincomarketplace.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_car"
        android:name="com.jhondevs.grupocincomarketplace.ui.car.CarFragment"
        android:label="Car"
        tools:layout="@layout/fragment_car" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jhondevs.grupocincomarketplace.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_pro_details"
        android:name="com.jhondevs.grupocincomarketplace.ProDetailsFragment"
        android:label="Detalle Productos"
        tools:layout="@layout/fragment_pro_details" />
    <fragment
        android:id="@+id/categoriasFragment"
        android:name="com.jhondevs.grupocincomarketplace.CategoriasFragment"
        android:label="fragment_categorias"
        tools:layout="@layout/fragment_categorias" />
</navigation>